--- a/Border Animation & Image Hover/index.html
+++ b/Border Animation & Image Hover/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="box">
+    <div class="avatar">
         <div class="content">
             <img src="/assets/img/avatar.jpg" alt="" srcset="">
             <h2>Armstrong Bui
