add class title in index.html

--- a/3d Neumorphism Effect/index.html
+++ b/3d Neumorphism Effect/index.html
@@ -13,6 +13,9 @@
   
 </head>
 <body>
+    <div class="title">
+        Button 3D Neumorphism Effect
+    </div>
     <div class="social-icons">
         <i class="fa-brands fa-google"></i>
         <i class="fa-brands fa-facebook"></i>
